apps/base/jellyfin/httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-httproute
spec:
  parentRefs:
  - name: mdch-lab
    namespace: cilium
  hostnames:
  - "jellyfin.mdch-lab.dev"
  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
